# labTwo

./: CMakeLists.txt  ReadMe.txt  clear_build.sh
.github/workflows/: build.yaml
include/: ipWorker.h  parser.h  type.h
src/: ipWorker.cpp  main.cpp  parser.cpp
tests/: CMakeLists.txt  testmain.cpp
